CRAPP-413: Only create CR discussions contexts lazily when needed
  * Catch errors when loading discussion to avoid breaking entire the CR
    UI if it happens
  * Only create the entire CR context when needed using new API